<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_list"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heading"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:textAlignment="center"
            android:visibility="visible"
            android:layout_marginStart="10dp"/>

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textAlignment="center"
            android:visibility="visible"
            android:layout_marginStart="10dp"/>

        <Button
            android:id="@+id/edit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_500"
            android:text="@string/edit"
            android:textAlignment="center"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <EditText
            android:id="@+id/textInput"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_task"
            android:padding="20dp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_input_add" />

    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/text_add"
        android:layout_marginTop="0dp"
        android:choiceMode="multipleChoice"
        android:visibility="visible" />

</RelativeLayout>